Fix vertical alignment of file input widget

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,6 +12,10 @@ h1 {
     font-size: 500%;
 }
 
+/* Bootstrap override */
+.input-append, .input-prepend {
+    margin-bottom: 9px;
+}
 
 .title {
     text-align: center;
